tests/spec/fail/builtin_named_unknown.aja
import (
    "fs"
)

print(fs.read(p = "/tmp/nope.txt"))
